fixed Linux command execution